<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".parse.ParseActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/bt_parse">
        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_input"
            android:textSize="@dimen/item_text_size"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_parse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_parse"
        android:textSize="@dimen/item_text_size"
        android:layout_alignParentEnd="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_words"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text_input_layout">
    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/indeterminateProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>